--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2676,4 +2676,8 @@
 
     <!-- An array of packages for which notifications cannot be blocked. -->
     <string-array translatable="false" name="config_nonBlockableNotificationPackages" />
+
+    <!-- Exception package list in total silence mode -->
+    <string-array translatable="false" name="config_exceptionPackagesInTotalSilence">
+    </string-array>
 </resources>
