--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2730,4 +2730,8 @@
 
 <!-- Network Recommendation -->
   <java-symbol type="array" name="config_networkRecommendationPackageNames" />
+
+  <!-- Exception package list in total silence mode -->
+  <java-symbol type="array" name="config_exceptionPackagesInTotalSilence" />
+
 </resources>
